--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest --watch"
   },
   "bin": {
     "generate-mock": "dist/index.js"
@@ -23,7 +24,10 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.5.4",
-    "@types/yargs": "^17.0.33"
+    "@types/yargs": "^17.0.33",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5"
   }
 }
