--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "mock-builder-generator",
+  "name": "mock-builder-generator-cli",
   "version": "0.1.0",
   "main": "dist/index.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsup",
     "test": "jest --watch"
   },
   "bin": {
-    "generate-mock": "dist/index.js"
+    "mbg": "dist/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Janik Kessler",
   "license": "ISC",
   "description": "Generates mock builders for TypeScript interfaces and types",
+  "peerDependencies": {
+    "@faker-js/faker": "^9.0.0"
+  },
   "dependencies": {
     "@inquirer/prompts": "^5.5.0",
     "change-case": "^5.4.4",
@@ -20,14 +23,15 @@
     "inquirer-select-pro": "^1.0.0-alpha.7",
     "ts-morph": "^23.0.0",
     "typescript": "^5.6.2",
-    "yargs": "^17.7.2"
+    "yargs": "^17.7.2",
+    "@faker-js/faker": "^9.0.0"
   },
   "devDependencies": {
-    "@faker-js/faker": "^9.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.5.4",
     "@types/yargs": "^17.0.33",
     "jest": "^29.7.0",
-    "ts-jest": "^29.2.5"
+    "ts-jest": "^29.2.5",
+    "tsup": "^8.3.5"
   }
 }
