--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsup",
-    "publish": "npm run build && npm version patch && npm publish",
+    "publish:npm": "npm run build && npm version patch && npm publish",
     "test": "jest --watch"
   },
   "bin": {
