--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.17",
   "main": "dist/index.js",
   "scripts": {
+    "postinstall": "node git-version.js",
     "build": "tsup",
     "publish:npm": "npm run build && npm version patch && npm publish",
     "test": "jest --watch"
@@ -35,6 +36,8 @@
     "yargs": "^17.7.2"
   },
   "devDependencies": {
+    "git-describe": "^4.1.1",
+    "fs-extra": "6.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.5.4",
     "@types/yargs": "^17.0.33",
